--- a/notebooks/EtsyAPIQueries.ipynb
+++ b/notebooks/EtsyAPIQueries.ipynb
@@ -21,7 +21,7 @@
    "source": [
     "import requests\n",
     "\n",
-    "API_KEY = 'l9ji35nq6gwbfix7p8olz16q'\n",
+    "API_KEY = '*********************",
     "BASE_URL = 'https://openapi.etsy.com/v3/application'\n",
     "url = f\"{BASE_URL}/listings/active\"\n",
     "\n",
